@@ -15,6 +15,7 @@ Version 1.8.4 patchlevel 5                                 ??? ??,  2012
 
 Fixes:
  * You couldn't @chat on open channels. Reported by Padraic. [MG]
+ * Win32 compile fixes by Daniel Powell. [MG]
 
 Functions:
  * Restrictions for the beep() function can now be modified with @function.
